9. Network Programming > 26. SOAP implementation -fixes

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,26 +1,26 @@
 [
   {
     "py/object": "model.project.Project",
-    "name": "Name_zh8 h",
-    "status": "release",
+    "name": "Name_  5mIq ",
+    "status": "obsolete",
     "inherit_global_categories": null,
     "view_status": "public",
-    "description": "Desc_AnL gnvm"
-  },
-  {
-    "py/object": "model.project.Project",
-    "name": "Name_WYsM ",
-    "status": "development",
-    "inherit_global_categories": null,
-    "view_status": "public",
-    "description": "Desc_nl x TMY f sxAJMfR cNMMI6pq  yqFI  2WFINE kdEqXtfoXHG6MCfrCw2apyThCfQoxW yQZ  "
+    "description": "Desc_ph8fSSy lg urzYjxVII 4Cxk2Ely7 Pb9W6f fIzmB8gb Dk0GP1ONMm iE 9 U6RZF"
   },
   {
     "py/object": "model.project.Project",
     "name": "Name_",
-    "status": "obsolete",
+    "status": "release",
     "inherit_global_categories": null,
     "view_status": "public",
-    "description": "Desc_W u uxF7DpE K1Iu0E5tW  bWWIhuXFHxaZ1HMSESeevALU8RexLb sD4"
+    "description": "Desc_OcvI0PC IZ5  P q0iiHI7tfrNOQ8tAHo4OoHx0C I RLR55 6tyjKlbESd 2F S KIO6P jQzW9M C QxLgv"
+  },
+  {
+    "py/object": "model.project.Project",
+    "name": "Name_n UTMdJ ",
+    "status": "development",
+    "inherit_global_categories": null,
+    "view_status": "public",
+    "description": "Desc_nD4aoXPx14Ywv 1 h2 DTt uh2 zk n5k5 D0i  e H4zTHr TMnCSA w DnTQ"
   }
 ]
